Fix spacing to use Primer's scale

--- a/source/features/infinite-scroll.css
+++ b/source/features/infinite-scroll.css
@@ -1,6 +1,6 @@
 aside[aria-label='Explore'] > .footer {
 	position: sticky !important;
-	top: 20px;
+	top: 24px;
 }
 
 aside[aria-label='Explore'] > .footer > :first-child {
